src/main/java/rogue/parser/SqlGrammarParser.java
// Generated from SqlGrammar.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SqlGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, SELECT=23, FROM=24, 
		WHERE=25, GROUP=26, BY=27, HAVING=28, ORDER=29, LIMIT=30, JOIN=31, ON=32, 
		RIGHT=33, LEFT=34, SKIPED=35, INNER=36, FULL=37, OUTER=38, CROSS=39, DESC=40, 
		ASC=41, AS=42, RANK=43, DENSE_RANK=44, ROW_NUMBER=45, NTILE=46, LEAD=47, 
		LAG=48, FIRST_VALUE=49, LAST_VALUE=50, NTH_VALUE=51, PERCENT_RANK=52, 
		CUME_DIST=53, OVER=54, PARTITION=55, ROWS=56, RANGE=57, GROUPS=58, UNBOUNDED=59, 
		PRECEDING=60, FOLLOWING=61, CURRENT=62, ROW=63, DISTINCT=64, WITH=65, 
		RECURSIVE=66, UNION=67, ALL=68, INTERSECT=69, EXCEPT=70, COUNT=71, SUM=72, 
		AVG=73, MIN=74, MAX=75, GROUP_CONCAT=76, AND=77, OR=78, NOT=79, LIKE=80, 
		ILIKE=81, SIMILAR=82, TO=83, IN=84, IS=85, NULL=86, TRUE=87, FALSE=88, 
		BETWEEN=89, CASE=90, WHEN=91, THEN=92, ELSE=93, END=94, FOR=95, UPDATE=96, 
		NOWAIT=97, USING=98, LOCKED=99, ID=100, STRING=101, INT=102, DOUBLE=103, 
		WS=104, LINE_COMMENT=105, MULTILINE_COMMENT=106;
	public static final int
		RULE_start = 0, RULE_dml = 1, RULE_select = 2, RULE_cte = 3, RULE_select_statement1 = 4, 
		RULE_select_statement2 = 5, RULE_selectItem = 6, RULE_windowFunction = 7, 
		RULE_frameClause = 8, RULE_frameBound = 9, RULE_tableExpression = 10, 
		RULE_tableReference = 11, RULE_join = 12, RULE_joinTypeSpec = 13, RULE_whereClause = 14, 
		RULE_groupByClause = 15, RULE_havingClause = 16, RULE_setOperation = 17, 
		RULE_orderByClause = 18, RULE_orderByItem = 19, RULE_limitClause = 20, 
		RULE_forUpdateClause = 21, RULE_expression = 22, RULE_caseExpression = 23, 
		RULE_functionCall = 24, RULE_columnReference = 25, RULE_literal = 26, 
		RULE_aggregationFunction = 27, RULE_windowOnlyFunction = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "dml", "select", "cte", "select_statement1", "select_statement2", 
			"selectItem", "windowFunction", "frameClause", "frameBound", "tableExpression", 
			"tableReference", "join", "joinTypeSpec", "whereClause", "groupByClause", 
			"havingClause", "setOperation", "orderByClause", "orderByItem", "limitClause", 
			"forUpdateClause", "expression", "caseExpression", "functionCall", "columnReference", 
			"literal", "aggregationFunction", "windowOnlyFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'('", "')'", "';'", "'OFFSET'", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'='", "'<'", "'>'", "'!='", "'<='", "'>='", "'<>'", "'~'", "'~*'", 
			"'!~'", "'!~*'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "SELECT", 
			"FROM", "WHERE", "GROUP", "BY", "HAVING", "ORDER", "LIMIT", "JOIN", "ON", 
			"RIGHT", "LEFT", "SKIPED", "INNER", "FULL", "OUTER", "CROSS", "DESC", 
			"ASC", "AS", "RANK", "DENSE_RANK", "ROW_NUMBER", "NTILE", "LEAD", "LAG", 
			"FIRST_VALUE", "LAST_VALUE", "NTH_VALUE", "PERCENT_RANK", "CUME_DIST", 
			"OVER", "PARTITION", "ROWS", "RANGE", "GROUPS", "UNBOUNDED", "PRECEDING", 
			"FOLLOWING", "CURRENT", "ROW", "DISTINCT", "WITH", "RECURSIVE", "UNION", 
			"ALL", "INTERSECT", "EXCEPT", "COUNT", "SUM", "AVG", "MIN", "MAX", "GROUP_CONCAT", 
			"AND", "OR", "NOT", "LIKE", "ILIKE", "SIMILAR", "TO", "IN", "IS", "NULL", 
			"TRUE", "FALSE", "BETWEEN", "CASE", "WHEN", "THEN", "ELSE", "END", "FOR", 
			"UPDATE", "NOWAIT", "USING", "LOCKED", "ID", "STRING", "INT", "DOUBLE", 
			"WS", "LINE_COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public DmlContext dml() {
			return getRuleContext(DmlContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SqlGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			dml();
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DmlContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public DmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterDml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitDml(this);
		}
	}

	public final DmlContext dml() throws RecognitionException {
		DmlContext _localctx = new DmlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dml);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			select();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(SqlGrammarParser.WITH, 0); }
		public List<CteContext> cte() {
			return getRuleContexts(CteContext.class);
		}
		public CteContext cte(int i) {
			return getRuleContext(CteContext.class,i);
		}
		public Select_statement2Context select_statement2() {
			return getRuleContext(Select_statement2Context.class,0);
		}
		public TerminalNode RECURSIVE() { return getToken(SqlGrammarParser.RECURSIVE, 0); }
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitSelect(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WITH:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(WITH);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RECURSIVE) {
					{
					setState(64);
					match(RECURSIVE);
					}
				}

				setState(67);
				cte();
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(68);
					match(T__0);
					setState(69);
					cte();
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(75);
				select_statement2();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				select_statement2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CteContext extends ParserRuleContext {
		public Token id;
		public TerminalNode AS() { return getToken(SqlGrammarParser.AS, 0); }
		public Select_statement1Context select_statement1() {
			return getRuleContext(Select_statement1Context.class,0);
		}
		public TerminalNode ID() { return getToken(SqlGrammarParser.ID, 0); }
		public CteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterCte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitCte(this);
		}
	}

	public final CteContext cte() throws RecognitionException {
		CteContext _localctx = new CteContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cte);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			((CteContext)_localctx).id = match(ID);
			setState(81);
			match(AS);
			setState(82);
			match(T__1);
			setState(83);
			select_statement1();
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Select_statement1Context extends ParserRuleContext {
		public Token distinct;
		public SelectItemContext columns;
		public TableExpressionContext from;
		public JoinContext join;
		public List<JoinContext> joins = new ArrayList<JoinContext>();
		public WhereClauseContext where;
		public GroupByClauseContext groupBy;
		public HavingClauseContext having;
		public OrderByClauseContext orderBy;
		public SetOperationContext setOp;
		public LimitClauseContext limit;
		public ForUpdateClauseContext forUpdate;
		public TerminalNode SELECT() { return getToken(SqlGrammarParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(SqlGrammarParser.FROM, 0); }
		public List<SelectItemContext> selectItem() {
			return getRuleContexts(SelectItemContext.class);
		}
		public SelectItemContext selectItem(int i) {
			return getRuleContext(SelectItemContext.class,i);
		}
		public TableExpressionContext tableExpression() {
			return getRuleContext(TableExpressionContext.class,0);
		}
		public List<Select_statement1Context> select_statement1() {
			return getRuleContexts(Select_statement1Context.class);
		}
		public Select_statement1Context select_statement1(int i) {
			return getRuleContext(Select_statement1Context.class,i);
		}
		public TerminalNode DISTINCT() { return getToken(SqlGrammarParser.DISTINCT, 0); }
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public GroupByClauseContext groupByClause() {
			return getRuleContext(GroupByClauseContext.class,0);
		}
		public HavingClauseContext havingClause() {
			return getRuleContext(HavingClauseContext.class,0);
		}
		public OrderByClauseContext orderByClause() {
			return getRuleContext(OrderByClauseContext.class,0);
		}
		public SetOperationContext setOperation() {
			return getRuleContext(SetOperationContext.class,0);
		}
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public ForUpdateClauseContext forUpdateClause() {
			return getRuleContext(ForUpdateClauseContext.class,0);
		}
		public Select_statement1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterSelect_statement1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitSelect_statement1(this);
		}
	}

	public final Select_statement1Context select_statement1() throws RecognitionException {
		Select_statement1Context _localctx = new Select_statement1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_select_statement1);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(SELECT);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(87);
				((Select_statement1Context)_localctx).distinct = match(DISTINCT);
				}
			}

			setState(90);
			((Select_statement1Context)_localctx).columns = selectItem();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(91);
				match(T__0);
				setState(92);
				selectItem();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(FROM);
			setState(99);
			((Select_statement1Context)_localctx).from = tableExpression();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 783831531520L) != 0)) {
				{
				{
				setState(100);
				((Select_statement1Context)_localctx).join = join();
				((Select_statement1Context)_localctx).joins.add(((Select_statement1Context)_localctx).join);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(106);
				((Select_statement1Context)_localctx).where = whereClause();
				}
			}

			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(109);
				((Select_statement1Context)_localctx).groupBy = groupByClause();
				}
			}

			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(112);
				((Select_statement1Context)_localctx).having = havingClause();
				}
			}

			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(115);
				((Select_statement1Context)_localctx).orderBy = orderByClause();
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 13L) != 0)) {
				{
				setState(118);
				((Select_statement1Context)_localctx).setOp = setOperation();
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(121);
				((Select_statement1Context)_localctx).limit = limitClause();
				}
			}

			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FOR) {
				{
				setState(124);
				((Select_statement1Context)_localctx).forUpdate = forUpdateClause();
				}
			}

			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					select_statement1();
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Select_statement2Context extends ParserRuleContext {
		public Token distinct;
		public SelectItemContext columns;
		public TableExpressionContext from;
		public JoinContext join;
		public List<JoinContext> joins = new ArrayList<JoinContext>();
		public WhereClauseContext where;
		public GroupByClauseContext groupBy;
		public HavingClauseContext having;
		public OrderByClauseContext orderBy;
		public SetOperationContext setOp;
		public LimitClauseContext limit;
		public ForUpdateClauseContext forUpdate;
		public TerminalNode SELECT() { return getToken(SqlGrammarParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(SqlGrammarParser.FROM, 0); }
		public List<SelectItemContext> selectItem() {
			return getRuleContexts(SelectItemContext.class);
		}
		public SelectItemContext selectItem(int i) {
			return getRuleContext(SelectItemContext.class,i);
		}
		public TableExpressionContext tableExpression() {
			return getRuleContext(TableExpressionContext.class,0);
		}
		public TerminalNode DISTINCT() { return getToken(SqlGrammarParser.DISTINCT, 0); }
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public GroupByClauseContext groupByClause() {
			return getRuleContext(GroupByClauseContext.class,0);
		}
		public HavingClauseContext havingClause() {
			return getRuleContext(HavingClauseContext.class,0);
		}
		public OrderByClauseContext orderByClause() {
			return getRuleContext(OrderByClauseContext.class,0);
		}
		public SetOperationContext setOperation() {
			return getRuleContext(SetOperationContext.class,0);
		}
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public ForUpdateClauseContext forUpdateClause() {
			return getRuleContext(ForUpdateClauseContext.class,0);
		}
		public Select_statement2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).enterSelect_statement2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlGrammarListener ) ((SqlGrammarListener)listener).exitSelect_statement2(this);
		}
	}

	public final Select_statement2Context select_statement2() throws RecognitionException {
		Select_statement2Context _localctx = new Select_statement2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_select_statement2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(SELECT);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(134);
				((Select_statement2Context)_localctx).distinct = match(DISTINCT);
				}
			}

			setState(137);
			((Select_statement2Context)_localctx).columns = selectItem();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(138);
				match(T__0);
				setState(139);
				selectItem();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(FROM);
			setState(146);
			((Select_statement2Context)_localctx).from = tableExpression();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 783831531520L) != 0)) {
				{
				{
				setState(147);
				((Select_statement2Context)_localctx).join = join();
				((Select_statement2Context)_localctx).joins.add(((Select_statement2Context)_localctx).join);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(153);
				((Select_statement2Context)_localctx).where = whereClause();
				}
			}

			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(156);
				((Select_statement2Context)_localctx).groupBy = groupByClause();
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(159);
				((Select_statement2Context)_localctx).having = havingClause();
				}
			}

			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(162);
				((Select_statement2Context)_localctx).orderBy = orderByClause();
				}
			}

			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 13L) != 0)) {
				{
				setState(165);
				((Select_statement2Context)_localctx).setOp = setOperation();
				}
			}

			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(168);
				((Select_statement2Context)_localctx).limit = limitClause();
				}
			}

			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FOR) {
				{
				setState(171);
				((Select_statement2Context)_localctx).forUpdate = forUpdateClause();
				}
			}

			setState(174);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
